[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/Level_Tiles.tres" type="TileSet" id=1]
[ext_resource path="res://player/TopDownPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/TutorialLevel.gd" type="Script" id=3]
[ext_resource path="res://enemies/Target.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="TutorialLevel" type="Node"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -720897, 0, 2, -786432, 0, 4, -786431, 0, 4, -786430, 0, 4, -786429, 0, 10, -786428, 0, 131073, -786427, 0, 131073, -786426, 0, 131073, -786425, 0, 131073, -786424, 0, 131073, -786423, 0, 131080, -786422, 0, 131073, -786421, 0, 131073, -786420, 0, 131073, -786419, 0, 131073, -786418, 0, 131080, -786417, 0, 131073, -786416, 0, 131073, -786415, 0, 131073, -786414, 0, 131079, -655361, 0, 65540, -720896, 0, 65536, -720895, 0, 65536, -720894, 0, 65536, -720893, 0, 5, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 0, 131072, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 0, 131072, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 0, 131072, -589825, 0, 65540, -655360, 0, 65536, -655359, 0, 65536, -655358, 0, 65536, -655357, 0, 5, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -655351, 0, 131072, -655350, 1, 0, -655349, 0, 65542, -655348, 0, 131073, -655347, 0, 131073, -655346, 0, 196615, -655345, 1, 0, -655344, 0, 6, -655343, 1, 0, -655342, 0, 131072, -524289, 0, 65540, -589824, 0, 65536, -589823, 0, 65536, -589822, 0, 65536, -589821, 0, 5, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 0, 131072, -589814, 1, 0, -589813, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 1, 0, -589808, 0, 131072, -589807, 1, 0, -589806, 0, 131072, -458753, 0, 65540, -524288, 0, 65536, -524287, 0, 65536, -524286, 0, 65536, -524285, 0, 5, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 0, 196616, -524278, 0, 131073, -524277, 0, 131073, -524276, 0, 131079, -524275, 1, 0, -524274, 0, 131078, -524273, 0, 131073, -524272, 0, 196615, -524271, 1, 0, -524270, 0, 131072, -393217, 0, 196618, -458752, 0, 65541, -458751, 0, 65541, -458750, 0, 65541, -458749, 0, 65539, -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 1, 0, -458743, 0, 131072, -458742, 1, 0, -458741, 1, 0, -458740, 0, 131072, -458739, 1, 0, -458738, 0, 131072, -458737, 1, 0, -458736, 1, 0, -458735, 1, 0, -458734, 0, 131072, -327681, 0, 131072, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 0, 131072, -393206, 1, 0, -393205, 0, 65542, -393204, 0, 196615, -393203, 1, 0, -393202, 0, 131072, -393201, 1, 0, -393200, 0, 65542, -393199, 0, 131073, -393198, 0, 131081, -262145, 0, 131072, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 0, 131072, -327670, 1, 0, -327669, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 0, 131072, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 0, 131072, -196609, 0, 131072, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 0, 65543, -262134, 1, 0, -262133, 0, 6, -262132, 1, 0, -262131, 0, 131078, -262130, 0, 196615, -262129, 1, 0, -262128, 0, 6, -262127, 1, 0, -262126, 0, 131072, -131073, 0, 131072, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 0, 131072, -196596, 1, 0, -196595, 0, 131072, -196594, 1, 0, -196593, 1, 0, -196592, 0, 131072, -196591, 1, 0, -196590, 0, 131072, -65537, 0, 131072, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 0, 65542, -131062, 0, 131073, -131061, 0, 196617, -131060, 0, 131073, -131059, 0, 196617, -131058, 0, 131073, -131057, 0, 131073, -131056, 0, 196615, -131055, 1, 0, -131054, 0, 65543, -1, 0, 131072, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, 65535, 0, 196614, 0, 0, 131073, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 131073, 14, 0, 131073, 15, 0, 131073, 16, 0, 131073, 17, 0, 131073, 18, 0, 7 )

[node name="TopDownPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 99, -96 )

[node name="Target" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, -352 )

[node name="Target2" parent="." instance=ExtResource( 4 )]
position = Vector2( 96, -352 )

[node name="Target3" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, -352 )

[node name="Target4" parent="." instance=ExtResource( 4 )]
position = Vector2( 352, -672 )

[node name="Target5" parent="." instance=ExtResource( 4 )]
position = Vector2( 416, -672 )

[node name="Target6" parent="." instance=ExtResource( 4 )]
position = Vector2( 480, -672 )

[node name="FullLightTrigger" type="Area2D" parent="."]
position = Vector2( 576, -160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullLightTrigger"]
shape = SubResource( 1 )

[node name="FullLightTrigger2" type="Area2D" parent="."]
position = Vector2( 1120, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullLightTrigger2"]
shape = SubResource( 1 )

[node name="ConeLightTrigger" type="Area2D" parent="."]
position = Vector2( 640, -160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConeLightTrigger"]
shape = SubResource( 1 )

[node name="ConeLightTrigger2" type="Area2D" parent="."]
position = Vector2( 1120, -128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConeLightTrigger2"]
shape = SubResource( 1 )

[connection signal="body_entered" from="FullLightTrigger" to="." method="_on_FullLightTrigger_body_entered"]
[connection signal="body_entered" from="FullLightTrigger2" to="." method="_on_FullLightTrigger_body_entered"]
[connection signal="body_entered" from="ConeLightTrigger" to="." method="_on_ConeLightTrigger_body_entered"]
[connection signal="body_entered" from="ConeLightTrigger2" to="." method="_on_ConeLightTrigger_body_entered"]
